objects/Account_Products__c.object
<CustomObject>
    <fields>
        <fullName>Account_Number__c</fullName>
        <formula>Account__r.External_ID__c</formula>
        <label>Account Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Source__c</fullName>
        <label>Account Source</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>Cascade</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Product</relationshipLabel>
        <relationshipName>Account_Product</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Active_Contracts__c</fullName>
        <label>Active Contracts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Active_Members__c</fullName>
        <label>Active Members</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Descriptor__c</fullName>
        <label>Descriptor</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Effective_End_Date__c</fullName>
        <label>Effective End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Effective_Start_Date__c</fullName>
        <label>Effective Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Medicare_Code__c</fullName>
        <label>Medicare Code</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Original_Effective_Date__c</fullName>
        <label>Original Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Package__c</fullName>
        <label>Package</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Account_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Parent Account Product Id</description>
        <label>Parent Account Product</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 AND 2 AND 3 AND 4</booleanFilter>
            <filterItems>
                <field>$Source.Account__c</field>
                <operation>equals</operation>
                <valueField>Account_Products__c.Account__c</valueField>
            </filterItems>
            <filterItems>
                <field>$Source.Id</field>
                <operation>notEqual</operation>
                <valueField>Account_Products__c.Id</valueField>
            </filterItems>
            <filterItems>
                <field>Account_Products__c.Package__c</field>
                <operation>notEqual</operation>
                <value>N/A</value>
            </filterItems>
            <filterItems>
                <field>Account_Products__c.Package__c</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account_Products__c</referenceTo>
        <relationshipLabel>Child Account Products</relationshipLabel>
        <relationshipName>Child_Account_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product2</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Account Product</relationshipLabel>
        <relationshipName>Account_Product</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Actively Purchasing</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Won</fullName>
                </value>
                <value>
                    <fullName>Lost</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Vendor__c</fullName>
        <label>Vendor</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Account Product</label>
    <listViews>
        <fullName>ALL</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Product__c</columns>
        <columns>Category__c</columns>
        <columns>Descriptor__c</columns>
        <columns>Package__c</columns>
        <columns>Vendor__c</columns>
        <columns>Medicare_Code__c</columns>
        <columns>Active_Contracts__c</columns>
        <columns>Active_Members__c</columns>
        <columns>Effective_Start_Date__c</columns>
        <columns>Effective_End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>ALL</label>
    </listViews>
    <listViews>
        <fullName>Stop_Loss</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Product__c</columns>
        <columns>Category__c</columns>
        <columns>Descriptor__c</columns>
        <columns>Package__c</columns>
        <columns>Vendor__c</columns>
        <columns>Medicare_Code__c</columns>
        <columns>Active_Contracts__c</columns>
        <columns>Active_Members__c</columns>
        <columns>Effective_End_Date__c</columns>
        <columns>Effective_Start_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Category__c</field>
            <operation>equals</operation>
            <value>STOPLOSS</value>
        </filters>
        <label>Stop Loss</label>
    </listViews>
    <nameField>
        <displayFormat>AP-{0000}</displayFormat>
        <label>Account Products Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Product</pluralLabel>
    <recordTypes>
        <fullName>Dearborn_Record_Type</fullName>
        <active>true</active>
        <label>Dearborn Record Type</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>